fixing alignment, and doing one last push before fixing a major bug

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body{
     position: fixed;
     left: 40vw;
     bottom: 35vh;
+    border-radius: 25px;
 }
 
 #loseCard{
@@ -74,10 +75,19 @@ h1 , h2{
     color: white;
     background-color: #DFADFF;
     padding: 15px 25px;
-    max-width: 450px;
-    margin: 5px;
+    /* max-width: 450px; */
+    
     border-radius: 20px;
+    
 }
+
+ h1{
+     position: fixed;
+     width: 25rem;
+     top: 20rem;
+ }
+
+
 
 p{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -93,6 +103,7 @@ p{
 
 #winner{
     background-color: #3DBEA8 !important;
+    
 }
 
 #start{
@@ -145,3 +156,21 @@ h2{
     left: 95vw;
 }
 
+#credits{
+    background-color: #3DBEA8;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 20rem;
+    max-height: 10rem;
+    color: white;
+    position: fixed;
+    top: 75.5rem;
+    left: 6.89em;
+    padding: 1rem 2rem;
+    border-radius: 25px;
+}
+
+
+/* margin was making it difficult to align all elements */
+*{
+    margin: 0;
+}
